FEED+DATA: warm pacing, weighted Cboe cache, persisted breaker, fixture provenance, per-subscriber EventBus, truthful reset/refresh
- Engine warm TRICKLES the active sector in live mode (1.5s spacing): firing all symbols at
  once queued them fairly AHEAD of interactive requests at Cboe's semaphore (~18s first-click
  latency on a 15-symbol sector). Fixture mode still warms instantly.
- Data jobs 'warm/refresh now' call the new MarketDataEngine.refreshBlocking — a job item can
  no longer report success for a refresh that never ran (the stale-while-refresh accessor
  returned stale state immediately).
- Cboe payload cache is WEIGHT-bounded (~64MB by contract-count proxy), not count-bounded —
  300 multi-MB chain trees was a heap risk.
- The Cboe breaker SURVIVES RESTARTS: trips persist to settings via the event bus; boot seeds
  the cooldown (a restart used to forget an active ban and resume traffic into the limiter).
- Persisted FIXTURE snapshots reload as FIXTURE, never STALE 'market' data — switching a local
  DB from demo to live can't dress fake prices up as stale real ones.
- EventBus: per-subscriber bounded queues (256, drop-oldest — events are hints) drained on
  virtual threads: one stalled SSE client blocks only its own drain, never the publisher or
  other subscribers (the single shared pump could stall all delivery).
- Data reset is truthful: MARKET_DATA now clears market_snapshot + synthetic datasets + the
  active-dataset/cooldown settings; EVERYTHING also clears workspace; the 'observed' registry
  row survives (schema seed, not user data); in-memory active-dataset cache invalidated after
  reset; UI table lists show clean names for predicate entries.
- Scenario banner shows the dataset NAME ('AAPL · selloff rebound · 20d · seed 7'), never a
  raw ds_… id (config exposes activeDatasetName).
342 JUnit green.